Plugin is not compatible with IntelliJ IDE 2022.3 #1466
Many updates in Gradle configuration